feat : chat client 구현