@@ -1,6 +1,6 @@
 package com.example.handler;
 
-import com.example.dto.Message;
+import com.example.dto.websocket.outbound.MessageRequest;
 import com.example.service.TerminalService;
 import com.example.util.JsonUtil;
 import jakarta.websocket.Session;
@@ -13,15 +13,13 @@ public class WebSocketSender {
         this.terminalService = terminalService;
     }
 
-    public void sendMessage(Session session, Message message) {
+    public void sendMessage(Session session, MessageRequest message) {
         if (session != null && session.isOpen()) {
-            JsonUtil.toJson(message).ifPresent(msg -> {
-                try {
-                    session.getBasicRemote().sendText(msg);
-                } catch (Exception ex) {
-                    terminalService.printSystemMessage(String.format("%s send failed error : %s", msg, ex.getMessage()));
+            JsonUtil.toJson(message).ifPresent(payload -> session.getAsyncRemote().sendText(payload, result -> {
+                if (!result.isOK()) {
+                    terminalService.printSystemMessage("'%s' send failed. cause : %s".formatted(payload, result.getException()));
                 }
-            });
+            }));
         }
     }
 }
